[tool.poetry]
name = "programs"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
tqdm = "^4.64.0"
numpy = "^1.23.1"
click = "^8.1.3"
simple-term-menu = "^1.5.0"
Pygments = "^2.12.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
